colunizada as metas
colunizada as metas

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -301,6 +301,29 @@ Para definir os objetivos estratégicos de TIC do Ministério da Cultura, utiliz
 
 As metas estabelecidas ajudam a direcionar as ações de TIC com foco nos seus objetivos estratégicos. As metas aqui definidas deverão ser monitoradas pelo Comitê de Governança Digital - CGD, e poderão ser alteradas a qualquer momento por aquele Comitê. A tabela abaixo demonstra as metas e indicadores a serem monitorados, no período proposto, para garantir a persecução dos objetivos estratégicos de TIC:
 
+| Objetivo Estratégico                                                                                               | Indicador                                                                                         | 2018 | 2019 | 2020 | 
+|--------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|------|------|------| 
+| OE.01 – Ampliar a oferta de serviços digitais de forma a potencializar políticas públicas culturais                | Número de serviços digitais disponibilizados                                                      | 2    | 4    | 6    | 
+| OE.02 - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos | Índice de implementação das ações do Plano de Dados Abertos do Sistema MinC                       | 60%  | 80%  | 100% | 
+| OE.03 - Aprimorar o nível de maturidade dos processos de TIC                                                       | Número de processos de TIC mapeados e executados                                                  | 2    | 4    | 6    | 
+| OE.04 - Estimular a Gestão do Conhecimento no MinC                                                                 | Quantidade de Wikis ou outras plataformas digitais disponibilizadas às áreas do MinC              | 4    | 6    | 8    | 
+| OE.05 - Aprimorar práticas de gestão da qualidade dos serviços de TIC                                              | Média anual do índice de satisfação do canal de atendimento dos usuários de TIC                   | 90%  | 93%  | 97%  | 
+|                                                                                                                    | Nota da pesquisa anual de satisfação com os serviços de TIC (Escala de 1 a 5)                     | 3,5  | 4    | 4,2  | 
+| OE.06 - Compartilhar e integrar dados, processos, sistemas, serviços e infraestrutura de TIC com outros órgãos     | Quantidade de órgãos de cultura estaduais e municipais com que o MinC compartilha recursos de TIC | 30   | 50   | 70   | 
+|                                                                                                                    | Quantidade de órgãos do SISP com que o MinC compartilha recursos de TIC                           | 2    | 4    | 6    | 
+| OE.07 - Modernizar e ampliar a estrutura funcional da área de TIC                                                  | Servidores com formação superior na área de TIC                                                   | 12   | 14   | 18   | 
+|                                                                                                                    | Quantidade de capacitações realizadas por servidores da área de TIC                               | 8    | 10   | 12   | 
+|                                                                                                                    | Divisão funcional dentro da área de TIC com cargo de gestão                                       | 6    | 10   | 13   | 
+| OE.08 - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | Número de assistentes virtuais implantados em sistemas do MinC                                    | 1    | 2    | 3    | 
+| OE.09 - Estimular o uso e compartilhamento de tecnologias livres                                                   | Número de projetos disponibilizados em repositórios abertos                                       | 60   | 80   | 100  | 
+| OE.10 – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | Quantidade de projetos desenvolvimentos em parcerias com universidades                            | 6    | 8    | 10   | 
+|                                                                                                                    | Implementação de Metodologia de Software                                                          | 10%  | 50%  | 100% | 
+
+
+
+
+
+
 | Objetivo Estratégico                                                                                               | Indicador                                                                                                    | Meta                                        | 
 |--------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|---------------------------------------------| 
 | OE.01 – Ampliar a oferta de serviços digitais de forma a potencializar políticas públicas culturais                | Número de serviços digitais disponibilizados                                     | **2018**: 2    **2019**: 4    **2020**: 6   | 
@@ -361,7 +384,7 @@ Do ponto de vista da infraestrutura, alguns ativos de rede podem ser absorvidos 
 | Metodologia de gestão de projetos instituída                                                     | Deficiência na comunicação dos serviços e resultados de TIC                                           | 
 | Plano de Dados abertos integrado do Sistema MinC                                                 | Inexistência de escritório de aquisições de TIC                                                       | 
 | Catálogo de Serviços orientado aos usuários                                                      | Ausência de um Plano de Continuidade de Negócios                                                      | 
-| Cargos de gestão ocupados por servidores de carreira                                                | Reduzido quadro de servidores                                                                | 
+| Cargos de gestão ocupados por servidores de carreira                                             | Reduzido quadro de servidores                                                                         | 
 | Automação dos processos de desenvolvimento de software                                           | Falta de cultura de processos                                                                         | 
 | Utilização das últimas tecnologias de mercado                                                    |                                                                                                       | 
 | Apoio da SGE e da Alta Administração                                                             |                                                                                                       | 
@@ -407,7 +430,6 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 - Política de Governança de Tecnologia da Informação e Comunicação - Portaria Nº97, de 13 de outubro de 2017
 - Atribuições do Comitê Integrado de Tecnologia da Informação - Portaria Nº 92, de 9 de outubro de 2017
 - Atribuições do Comitê de Governança Digital no âmbito do Ministério da Cultura - Portaria Nº 3, de 17 de janeiro de 2017
-- Site do Ministério sobre Normas de TIC - https://www.cultura.gov.br/normas-de-ti
 
 # 6  RESULTADOS DO PDTIC ANTERIOR 
 
