--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -753,7 +753,7 @@ Para o atendimento das necessidades, priorizaram-se projetos de TIC, os quais fo
 
 ## 8.1  Critérios de Priorização
 
-Para identificar quais são os projetos mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TIC para a realização dessas prioritariamente, foi considerada a quantidade de áreas que diretamente demandaram o projeto. Além disto, o comitê de governança digital tem a prerrogativa de ordenar a execução dos projetos de acordo com o que julgar mais prioritário. 
+Para identificar quais são os projetos mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TIC para a realização desses prioritariamente, foi considerada a quantidade de áreas que diretamente demandaram o projeto. Além disto, o Comitê de Governança Digital tem a prerrogativa de ordenar a execução dos projetos de acordo com o que julgar prioritário. 
 
 ## 8.2 Portfólio de Projetos de TIC Priorizado
 
@@ -846,8 +846,6 @@ Para identificar quais são os projetos mais impactantes para o órgão, com o o
 | P85 | Capacitação no sistema Salic                                                                                                               | NI7                                                                                                                                                                                                                                        | 
 | P86 | Capacitação no sistema Vale-Cultura                                                                                                        | NI8                                                                                                                                                                                                                                        | 
 
-Total de 86 projetos.
-
 # 9  PLANO DE GESTÃO DE PESSOAS DA TIC NO MINC
 
 A força de trabalho da Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) do MinC até setembro de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
@@ -861,7 +859,6 @@ A força de trabalho da Coordenação-Geral de Tecnologia da Informação e Comu
 | COSIS            | 2          | 14            | 9           | 22    | 
 | Total            | 10         | 47            | 10          | 67    | 
 | Distribuição (%) | 14,95%     | 70,1%         | 14,95%      |       | 
-
 
 É possível observar, a partir da comparação com a situação de pessoal nos três anos anteriores (de 2015 a 2017), que houve uma redução de recursos humanos para a área de TIC embora esta venha conquistando papel cada dia mais estratégico na organização.
 
