--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -749,13 +749,9 @@ Para tanto, encontra-se instituída uma metodologia de gestão de projetos de TI
 
 Por meio do Portfolio de Projetos de TIC, o Comitê de Governança Digital-CGD monitora e prioriza todas as ações da unidade, criando um framework de gestão e governança mais eficiente, mais eficaz e capaz de responder a mudanças.
 
-Para o atendimento das necessidades, priorizaram-se projetos de TIC, os quais foram incluídos no Portfólio e categorizados de acordo com a natureza das suas ações. O Portfólio de Projetos de TIC é um instrumento de monitoramento contínuo da unidade de TIC que substitui o Plano de Ação, pois determina como deverão ser alocados os recursos de TIC, e possibilita que o Comitê Executivo de TIC exerça a governança sobre as ações da unidade.
+O Portfólio de Projetos de TIC é um instrumento de monitoramento contínuo da unidade de TIC que substitui o Plano de Ação, pois determina como deverão ser alocados os recursos de TIC, e possibilita que o Comitê Executivo de TIC exerça a governança sobre as ações da unidade.
 
-## 8.1  Critérios de Priorização
-
-Para identificar quais são os projetos mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TIC para a realização desses prioritariamente, foi considerada a quantidade de áreas que diretamente demandaram o projeto. Além disto, o Comitê de Governança Digital tem a prerrogativa de ordenar a execução dos projetos de acordo com o que julgar prioritário. 
-
-## 8.2 Portfólio de Projetos de TIC Priorizado
+## 8.1 Portfólio de Projetos de TIC Priorizado
 
 | Id  | Projeto                                                                                                                                    | Necessidades atendidas                                                                                                                                                                                                                     | 
 |-----|--------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------| 
