--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -741,7 +741,7 @@ São necessidades por informações que sejam essenciais para executação dos p
 | NI12 | Integrar dados de diversos sistemas do MinC                                                                                    | SDC               | 
 | NI13 | Integrar bancos de dados do MEC aos da Política Nacional de Cultura Viva                                                       | SDC               | 
 
-# 8  PORTFOLIO DE PROJETOS DE TIC
+# 8  PROJETOS DE TIC
 
 Cabe ressaltar que, diferente da maioria dos outros órgãos, esta unidade preferiu não produzir um plano de ações. Entendendo que o plano de ações raramente consegue refletir a real necessidade do órgão, e que ainda se torna um instrumento ineficiente de gestão e monitoramento, preferiu-se alinhar as necessidades de TIC do Ministério da Cultura por meio de uma gestão orientada a projetos.
 
@@ -751,7 +751,7 @@ Por meio do Portfolio de Projetos de TIC, o Comitê de Governança Digital-CGD m
 
 O Portfólio de Projetos de TIC é um instrumento de monitoramento contínuo da unidade de TIC que substitui o Plano de Ação, pois determina como deverão ser alocados os recursos de TIC, e possibilita que o Comitê Executivo de TIC exerça a governança sobre as ações da unidade.
 
-## 8.1 Portfólio de Projetos de TIC Priorizado
+## 8.1 Portfólio de Projetos de TIC
 
 | Id  | Projeto                                                                                                                                    | Necessidades atendidas                                                                                                                                                                                                                     | 
 |-----|--------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------| 
