--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1044,6 +1044,6 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 |**[Plataforma Rede Cultura Viva](http://culturaviva.gov.br/)**|Produção |Cidadania e Diversidade Cultural |Cadastro dos Pontos e Pontões de Cultura para atendimento à [Lei Cultura Viva](http://www.cultura.gov.br/cultura-viva1)|AGPL3 |
 |**[Cadastro Nacional de Bibliotecas](http://bibliotecas.cultura.gov.br/)**|Produção |Livro, Leitura, Literatura e Bibliotecas |Cadastro de bibliotecas públicas e comunitárias utilizando o Mapas Culturais |AGPL3 |
 |**Arches Lib**|Descontinuação |Livro, Leitura, Literatura e Bibliotecas |Gestão de acervo e circulação para bibliotecas |Proprietário |
-|**[Sistema Nacional de Cultura - SNC](http://cultura.gov.br/snc)**|Produção |Articulação e Desenvolvimento Institucional |Platforma de cadastro e articulação com os **Entes Federados** para gestão e promoção de políticas culturais  |AGPL3 |
+|**[Sistema Nacional de Cultura - SNC](http://cultura.gov.br/snc)**|Produção |Diversidade Cultural |Platforma de cadastro e articulação com os **Entes Federados** para gestão e promoção de políticas culturais  |AGPL3 |
 |**e-Praças - Gestão das [praças CEUS](http://ceus.cultura.gov.br/)**|Desenvolvimento |Infraestrutura Cultural |Plataforma na nuvem para uso dos administradores das praças CEUs, registro de atividades e articulação com o MinC |AGPL3 |
 |**[Plataforma de Gestão do Conselho Nacional de Política Cultural - CNPC](http://cnpc.cultura.gov.br/)**|Produção |Articulação e Desenvolvimento Institucional |Plataforma para Comunicação, Transparência e Participação do Conselho Nacional de Politica Cultural |MinC |
