--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -1046,4 +1046,4 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 |**Arches Lib**|Descontinuação |Livro, Leitura, Literatura e Bibliotecas |Gestão de acervo e circulação para bibliotecas |Proprietário |
 |**[Sistema Nacional de Cultura - SNC](http://cultura.gov.br/snc)**|Produção |Diversidade Cultural |Platforma de cadastro e articulação com os **Entes Federados** para gestão e promoção de políticas culturais  |AGPL3 |
 |**e-Praças - Gestão das [praças CEUS](http://ceus.cultura.gov.br/)**|Desenvolvimento |Infraestrutura Cultural |Plataforma na nuvem para uso dos administradores das praças CEUs, registro de atividades e articulação com o MinC |AGPL3 |
-|**[Plataforma de Gestão do Conselho Nacional de Política Cultural - CNPC](http://cnpc.cultura.gov.br/)**|Produção |Articulação e Desenvolvimento Institucional |Plataforma para Comunicação, Transparência e Participação do Conselho Nacional de Politica Cultural |MinC |
+|**[Plataforma de Gestão do Conselho Nacional de Política Cultural - CNPC](http://cnpc.cultura.gov.br/)**|Produção |Diversidade Cultural |Plataforma para Comunicação, Transparência e Participação do Conselho Nacional de Politica Cultural |MinC |
